--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,16 @@
     "require": {
         "php": "^8.0",
         "ext-zip": "*",
+        "appstract/laravel-opcache": "^4.0",
         "fideloper/proxy": "^4.4",
         "friendsofphp/php-cs-fixer": "^3.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "nunomaduro/larastan": "^0.7.5"
+        "nunomaduro/larastan": "^0.7.5",
+        "sentry/sentry-laravel": "^2.5",
+        "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
