--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.2",
         "nunomaduro/larastan": "^0.7.5",
         "sentry/sentry-laravel": "^2.5",
         "spatie/laravel-permission": "^4.0"
