--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-APP_NAME=laravel
+APP_NAME=laravel-vuetify
 APP_ENV=local
 APP_KEY=base64:A4Gw+pRTtTcAHWMYwHsYt6LnlHhEzIbaRQCYseIdi/o=
 APP_DEBUG=true
 APP_URL="http://${APP_NAME}.docker"
 
+XOLVIO_DOCKER_TAG=minimal-8.0
+
 TZ=Europe/Amsterdam
 UID=1000
-
-LOG_CHANNEL=stack
-LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST="${APP_NAME}-laravel-db"
@@ -17,4 +16,4 @@ DB_DATABASE="${APP_NAME}"
 DB_USERNAME="${APP_NAME}"
 DB_PASSWORD="${APP_NAME}"
 
-DEV_PORT_DATABASE=10500
+DEV_PORT_DATABASE=10600
