--- a/composer.json
+++ b/composer.json
@@ -6,25 +6,26 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "ext-pdo_mysql": "*",
         "ext-zip": "*",
         "appstract/laravel-opcache": "^4.0",
         "fideloper/proxy": "^4.4",
-        "friendsofphp/php-cs-fixer": "^3.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "nunomaduro/larastan": "^0.7.5",
         "sentry/sentry-laravel": "^2.5",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
+        "nunomaduro/larastan": "^0.7.6",
         "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
