Update of npm packages and env update

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:A4Gw+pRTtTcAHWMYwHsYt6LnlHhEzIbaRQCYseIdi/o=
 APP_DEBUG=true
 APP_URL="http://${APP_NAME}.docker"
+VITE_APP_URL="${APP_URL}"
 
 XOLVIO_DOCKER_TAG=minimal-8.0
 
