--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "^5.9.55",
     "roboto-fontface": "*",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.8",
-    "vuetify": "^3.0.0-alpha.0"
+    "vue": "^3.1.2",
+    "vue-router": "^4.0.10",
+    "vuetify": "^3.0.0-alpha.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.2",
-    "@vue/compiler-sfc": "^3.0.5",
-    "eslint-plugin-vue": "^7.9.0",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/compiler-sfc": "^3.1.2",
+    "eslint-plugin-vue": "^7.11.1",
     "rollup-plugin-copy": "^3.4.0",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
-    "typescript": "^4.1.3",
-    "vite": "^2.3.0",
-    "vite-plugin-eslint": "^1.1.0",
-    "vite-plugin-pages": "^0.11.3",
-    "vue-tsc": "^0.0.24"
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "typescript": "^4.3.4",
+    "vite": "^2.3.8",
+    "vite-plugin-eslint": "^1.2.0",
+    "vite-plugin-pages": "^0.13.2",
+    "vue-tsc": "^0.2.0"
   }
 }
