--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ DB_USERNAME="${APP_NAME}"
 DB_PASSWORD="${APP_NAME}"
 
 DEV_PORT_DATABASE=10600
+COMPOSE_PROJECT_NAME="${APP_NAME}"
+
+ADMIN_EMAIL=changethis
+ADMIN_PASSWORD=changethisevenmore
