--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
+    "watch": "vite build --mode=development --outDir=public/vue --watch",
     "dev": "vite"
   },
   "dependencies": {
@@ -14,15 +15,20 @@
     "vuetify": "^3.0.0-alpha.7"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.1.2",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^7.29.0",
     "eslint-plugin-vue": "^7.11.1",
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "typescript": "^4.3.4",
     "vite": "^2.3.8",
-    "vite-plugin-eslint": "^1.2.0",
+    "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-pages": "^0.13.2",
     "vue-tsc": "^0.2.0"
   }
