--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "types": ["vite/client", "vuetify"]
+    "types": ["vite/client", "vuetify"],
   },
   "include": [
     "resources/vue/src/**/*.ts",
