--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass-loader": "^12.1.0",
     "typescript": "^4.3.4",
     "vite": "^2.3.8",
+    "vite-plugin-compression": "^0.2.5",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-pages": "^0.14.8",
     "vue-tsc": "^0.2.0"
