--- a/package.json
+++ b/package.json
@@ -12,21 +12,19 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "roboto-fontface": "*",
-    "vue": "^3.1.2",
+    "vue": "^3.1.4",
     "vue-router": "^4.0.10",
-    "vuetify": "^3.0.0-alpha.7"
+    "vuetify": "^3.0.0-alpha.8"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.1.2",
-    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.29.0",
     "eslint-plugin-vue": "^7.12.1",
     "rollup-plugin-copy": "^3.4.0",
-    "sass": "^1.35.1",
+    "sass": "~1.35.1",
     "sass-loader": "^12.1.0",
     "typescript": "^4.3.4",
     "vite": "^2.3.8",
