--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "vite build",
     "watch": "vite build --mode=development --watch",
     "dev": "vite",
-    "lint": "eslint --fix resources/vue/src/**/*.ts resources/vue/src/**/*.vue",
-    "lint-dry": "eslint --fix-dry-run resources/vue/src/**/*.ts resources/vue/src/**/*.vue"
+    "lint": "eslint --fix resources/vue/src/**/*.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts",
+    "lint-dry": "eslint --ext .js,.ts,.vue resources/vue/src/**/*.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts"
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
