--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
     "lint-dry": "eslint --ext .js,.ts,.vue resources/vue/src/**/*.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts"
   },
   "dependencies": {
-    "@mdi/font": "^5.9.55",
     "roboto-fontface": "*",
-    "vue": "^3.1.4",
-    "vue-router": "^4.0.10",
-    "vuetify": "^3.0.0-alpha.9"
+    "vue": "^3.2.11",
+    "vue-router": "^4.0.11",
+    "vuetify": "^3.0.0-alpha.11"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "@vitejs/plugin-vue": "^1.2.5",
+    "@mdi/js": "^6.1.95",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "@vitejs/plugin-vue": "^1.6.2",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.31.0",
-    "eslint-plugin-vue": "^7.14.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.17.0",
     "rollup-plugin-copy": "^3.4.0",
-    "sass": "~1.32",
+    "sass": "^1.39.2",
     "sass-loader": "^12.1.0",
-    "typescript": "^4.3.5",
-    "vite": "^2.4.3",
-    "vite-plugin-compression": "^0.2.6",
+    "typescript": "^4.4.3",
+    "vite": "^2.5.6",
+    "vite-plugin-compression": "^0.3.5",
     "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-pages": "^0.14.9"
+    "vite-plugin-pages": "^0.18.0",
+    "vuetify-loader": "^2.0.0-alpha.3"
   }
 }
