--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "types": ["vite/client"],
+    "noUnusedLocals": true,
   },
   "include": [
     "resources/vue/src/**/*.ts",
