--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         ],
         "test": [
             "php artisan config:clear",
-            "php artisan test"
+            "php artisan test",
+            "php artisan config:cache"
         ]
     },
     "extra": {
