--- a/package.json
+++ b/package.json
@@ -10,28 +10,32 @@
     "lint-dry": "eslint --ext .js,.ts,.vue resources/vue/src/**/*.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
+    "@vue/composition-api": "^1.2.4",
     "roboto-fontface": "*",
-    "vue": "^3.2.12",
-    "vue-router": "^4.0.11",
-    "vuetify": "^3.0.0-alpha.11"
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2",
+    "vuetify": "^2.5.10"
   },
   "devDependencies": {
-    "@mdi/js": "^6.1.95",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "@vitejs/plugin-vue": "^1.8.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "@vue/compiler-sfc": "^3.2.20",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.4",
+    "@vue/runtime-dom": "^3.2.20",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint-plugin-vue": "^7.20.0",
     "rollup-plugin-copy": "^3.4.0",
-    "sass": "^1.41.1",
+    "sass": "~1.32.6",
     "sass-loader": "^12.1.0",
-    "typescript": "^4.4.3",
-    "vite": "^2.5.10",
-    "vite-plugin-compression": "^0.3.5",
+    "typescript": "^4.3.4",
+    "unplugin-vue-components": "^0.16.0",
+    "unplugin-vue2-script-setup": "^0.6.12",
+    "vite": "^2.6.10",
+    "vite-plugin-compression": "^0.2.6",
     "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-pages": "^0.18.1",
-    "vuetify-loader": "^2.0.0-alpha.4"
+    "vite-plugin-pages": "^0.14.9",
+    "vite-plugin-vue2": "^1.9.0",
+    "vue-eslint-parser": "^8.0.0"
   }
 }
