--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,24 @@
         "appstract/laravel-opcache": "^4.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.3",
-        "laravel/framework": "^8.61",
-        "laravel/sanctum": "^2.11",
+        "guzzlehttp/guzzle": "^7.4",
+        "laravel/framework": "^8.69",
+        "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.6",
         "laravel/ui": "^3.3",
-        "sentry/sentry-laravel": "^2.8",
-        "spatie/laravel-permission": "^5.1"
+        "sentry/sentry-laravel": "^2.9",
+        "spatie/laravel-data": "^1.0",
+        "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
         "brianium/paratest": "^6.3",
-        "facade/ignition": "^2.13",
+        "facade/ignition": "^2.16",
         "fakerphp/faker": "^1.16",
-        "friendsofphp/php-cs-fixer": "^3.0",
+        "friendsofphp/php-cs-fixer": "^3.2",
         "mockery/mockery": "^1.4",
-        "nunomaduro/collision": "^5.9",
-        "nunomaduro/larastan": "^0.7.11",
+        "nunomaduro/collision": "^5.10",
+        "nunomaduro/larastan": "^1.0",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
