--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "vite build",
     "watch": "vite build --mode=development --watch",
     "dev": "vite",
-    "lint": "eslint --fix resources/vue/src/**/*.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts",
-    "lint-dry": "eslint --ext .js,.ts,.vue resources/vue/src/**/*.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts"
+    "lint": "eslint --fix resources/vue/src/**/*.ts resources/vue/src/**/*.d.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts",
+    "lint-dry": "eslint resources/vue/src/**/*.ts  resources/vue/src/**/*.d.ts resources/vue/src/**/*.vue ./.eslintrc.js ./vite.config.ts"
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
@@ -26,13 +26,14 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.20.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-gzip": "^2.5.0",
     "sass": "~1.32.6",
     "sass-loader": "^12.1.0",
     "typescript": "^4.3.4",
     "unplugin-vue-components": "^0.16.0",
     "unplugin-vue2-script-setup": "^0.6.12",
     "vite": "^2.6.10",
-    "vite-plugin-compression": "^0.2.6",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-pages": "^0.14.9",
     "vite-plugin-vue2": "^1.9.0",
