--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@vue/composition-api": "^1.2.4",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
+    "vue-i18n": "^8.26.7",
+    "vue-i18n-composable": "^0.2.2",
     "vue-router": "^3.5.2",
     "vuetify": "^2.5.10"
   },
