--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,18 @@
-APP_NAME=laravel-vuetify
+APP_NAME=laravel
 APP_ENV=local
-APP_KEY=base64:A4Gw+pRTtTcAHWMYwHsYt6LnlHhEzIbaRQCYseIdi/o=
-APP_DEBUG=true
+APP_KEY=
+APP_DEBUG=false
 APP_URL="http://${APP_NAME}.docker"
 VITE_APP_URL="${APP_URL}"
 
-XOLVIO_DOCKER_TAG=minimal-8.0
-
 TZ=Europe/Amsterdam
-UID=1000
 
 DB_CONNECTION=mysql
-DB_HOST="${APP_NAME}-laravel-db"
+DB_HOST="${APP_NAME}-mysql"
 DB_PORT=3306
 DB_DATABASE="${APP_NAME}"
 DB_USERNAME="${APP_NAME}"
 DB_PASSWORD="${APP_NAME}"
-
-DEV_PORT_DATABASE=10600
-COMPOSE_PROJECT_NAME="${APP_NAME}"
 
 ADMIN_EMAIL=changethis
 ADMIN_PASSWORD=changethisevenmore
